--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   <meta name="format-detection" content="email=no">
   <!-- replace:css -->
   <!-- endreplace -->
+  <h1>hello,susie</h1>>
 </head>
 
 <body>
   <div id="container"></div>
 </body>
 <!-- replace:js -->
-<script src="/dist/app.js"></script>
+<!--script src="/dist/app.js"></script-->
 <!-- endreplace -->
 </html>
