--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   <meta name="format-detection" content="email=no">
   <!-- replace:css -->
   <!-- endreplace -->
-  <h1>hello,susie</h1>>
+  <h3>hello,susie</h3>
 </head>
 
 <body>
+  <p>ready for you</p>
   <div id="container"></div>
 </body>
 <!-- replace:js -->
